<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroGanado">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="397dp"
            android:layout_height="110dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="624dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="189dp"
                android:layout_height="108dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="620dp" android:layout_marginEnd="220dp"
                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/borde">

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageButton
                android:layout_width="160dp"
                android:layout_height="103dp" app:srcCompat="@drawable/camara5"
                android:id="@+id/imageButton4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="6dp"
                app:layout_constraintBottom_toBottomOf="parent" android:scaleType="fitCenter"
                app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="220dp"
                android:backgroundTint="#00FFFFFF" android:contentDescription="@string/todo"/>
        <ImageButton
                android:layout_width="156dp"
                android:layout_height="102dp" app:srcCompat="@drawable/camara5"
                android:id="@+id/imageButton5" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton4"
                app:layout_constraintTop_toTopOf="parent" android:backgroundTint="#00F7F5F5"
                app:layout_constraintVertical_bias="1.0" android:scaleType="fitCenter"
                android:layout_marginStart="44dp" android:contentDescription="@string/todo"/>
        <TextView
                android:text="@string/txtcamara1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.13"
                android:layout_marginTop="88dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/txtcamara2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
                android:layout_marginTop="88dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.697"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="604dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
        <TextView
                android:text="@string/txtagregaganado"
                android:layout_width="match_parent"
                android:translationY="30sp"
                android:layout_height="29dp" android:id="@+id/textView4" android:textAlignment="center"
                android:textSize="24sp" android:fontFamily="sans-serif-black"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textPersonName"
                android:translationY="40sp"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:ems="10"
                android:id="@+id/editText3"
                tools:targetApi="o"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TxtApodo"
                android:translationY="60sp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:importantForAutofill="no" tools:targetApi="o"/>
        <TextView
                android:text="@string/TxtSexo"

                android:translationY="90sp"
                android:layout_width="132dp"
                android:layout_height="37dp" android:id="@+id/textView7"/>
        <RadioButton
                android:text="@string/BtnMacho"
                android:translationY="90sp"
                android:translationX="30dp"
                android:layout_width="132dp"
                android:layout_height="wrap_content" android:id="@+id/radioButton2"/>
        <RadioButton
                android:text="@string/Btnsexo2"
                android:translationY="60sp"
                android:translationX="250sp"
                android:layout_width="132dp"
                android:layout_height="wrap_content" android:id="@+id/radioButton3"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:translationY="90sp"
                android:hint="@string/TxtRaza"
                android:ems="10"
                android:id="@+id/editText2" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="match_parent"
                android:translationY="120sp"
                android:hint="@string/fecha"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editText4" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="match_parent"
                android:translationY="150sp"
                android:hint="@string/n_mero_del_animal"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText5" android:importantForAutofill="no" tools:targetApi="o"/>
        <Button
                android:onClick="guardarregistro"
                android:text="@string/button"
                android:translationY="170sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>