<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registo">

    <ImageView
            android:layout_width="590dp"
            android:layout_height="772dp" app:srcCompat="@drawable/fondo"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="78dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="102dp" android:layout_marginTop="123dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="216dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.364"
            app:layout_constraintVertical_bias="0.378" android:contentDescription="@string/imagenfondo"/>
    <FrameLayout
            android:layout_width="378dp"
            android:layout_height="683dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:background="@drawable/borde"
            android:backgroundTint="#59FFFFFF">

        <TextView
                android:text="@string/txtregistro"
                android:layout_width="378dp"
                android:translationY="30sp"
                android:layout_height="58dp" android:id="@+id/textView3" android:fontFamily="sans-serif-black"
                android:textAlignment="center" android:textSize="36sp"/>
        <LinearLayout
                android:orientation="vertical"
                android:translationY="110sp"
                android:importantForAutofill="no"
                tools:targetApi="O"
                android:layout_width="378dp"
                android:layout_height="53dp">
            <EditText
                    android:layout_width="293dp"
                    android:layout_height="match_parent"
                    android:translationX="50sp"
                    android:inputType="textPersonName"
                    tools:targetApi="O"
                    android:hint="@string/TxtNombreRegistro"
                    android:ems="10"
                    android:id="@+id/TxtNombreR" android:importantForAutofill="no"/>
        </LinearLayout>
        <EditText
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:translationY="210sp"
                android:translationX="50sp"
                android:hint="@string/TxtApellidoRegistro"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/TxtApellidoR" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:translationY="310sp"
                android:translationX="50sp"
                android:hint="@string/TxtCorreoRegistro"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/TxtCorreoElectronicoR" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:translationY="410sp"
                android:hint="@string/TxtContraseñaRegistro"
                android:translationX="50sp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/TxtContraseñaR" android:importantForAutofill="no" tools:targetApi="o"/>
        <Button
                android:onClick="Registro"
                android:text="@string/BtnGuardarRegistro"
                android:translationY="540sp"
                android:translationX="100sp"
                android:layout_width="165dp"
                android:layout_height="66dp"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>