<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:contentDescription="@string/logo"
            android:layout_width="576dp"
            android:layout_height="769dp" app:srcCompat="@drawable/fondo"
            android:id="@+id/fondo" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="193dp"
            android:layout_height="190dp" app:srcCompat="@drawable/logo"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:contentDescription="@string/logo"
    />
    <FrameLayout
            android:contentDescription="@string/Framelayaut"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:background="@drawable/borde" android:backgroundTint="#59FFFFFF"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="7dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62" app:layout_constraintHorizontal_bias="0.488"
            android:id="@+id/frameLayout">
        <EditText
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/textocorreo"
                android:importantForAutofill="no"
                tools:targetApi="O"
                android:translationY="70sp"
                android:id="@+id/TxtCorreo"/>
        <EditText
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:importantForAutofill="no"
                tools:targetApi="O"
                android:hint="@string/textocontraseña"
                android:translationY="150sp"
                android:id="@+id/TxtContrasena"/>
        <TextView
                android:text="@string/txtiniciar_sesion"
                android:layout_width="match_parent"
                android:translationY="20sp"
                android:layout_height="43dp"
                android:id="@+id/textView" android:textAlignment="center" android:textSize="36sp"
                android:fontFamily="sans-serif-black"/>
        <Button
                android:onClick="login"
                android:text="@string/entrar"
                android:contentDescription="@string/txtiniciar_sesion"
                android:translationY="270sp"
                android:translationX="37dp"
                android:layout_width="135dp"
                android:layout_height="wrap_content" android:id="@+id/BtnEntrar"/>

    </FrameLayout>
    <Button
            android:onClick="registrarse"
            android:text="@string/btnregistro"
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:id="@+id/BtnRegistrarse" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintHorizontal_bias="0.819"/>
</androidx.constraintlayout.widget.ConstraintLayout>